<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="足迹">
        <menu>
            <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_map"
                    android:title="@string/menu_map"/>
            <item
                    android:id="@+id/nav_record"
                    android:icon="@drawable/ic_path"
                    android:title="@string/menu_path"/>

        </menu>
    </item>

    <item android:title="关于">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_feed"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/menu_feed"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/menu_about"/>
        </menu>
    </item>
    <item android:title="其他">
        <menu>
            <item
                    android:id="@+id/nav_loginout"
                    android:icon="@drawable/loginout"
                    android:title="@string/menu_loginout"/>
        </menu>
    </item>
</menu>
