<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.ForgetPWActivity">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <ImageView
                android:id="@+id/iv_register_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:onClick="onBack"
                app:srcCompat="@drawable/back0"
                tools:ignore="MissingConstraints,VectorDrawableCompat" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:text="@string/title_resetpassword"
                android:textSize="28sp"
                android:textColor="#000000"
                android:gravity="center"
                tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
        <View

                android:layout_width="match_parent"
                android:layout_height="100dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/user_id"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            <EditText
                    android:id="@+id/user_id"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="用户名/手机号/邮箱"
                    android:ems="16"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/login_t2"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/user_passwd"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            <EditText
                    android:id="@+id/editText2"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:ems="16"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/user_repasswd"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            <EditText
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:ems="16"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_registeractivity_phoneCodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/code"/>
            <EditText
                    android:id="@+id/et_registeractivity_phoneCodes"
                    android:layout_width="160dp"
                    android:layout_weight="3"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14sp"
                    android:hint="请输入4位验证码" />

            <ImageView
                    android:id="@+id/iv_registeractivity_showCode"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:clickable="true"
                    android:onClick="onVerify"
                    />
        </LinearLayout>

        <Button
                android:id="@+id/login_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="onReset"
                android:text="确认重置" />

    </LinearLayout>

</RelativeLayout>