<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/iv_register_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            android:onClick="onBack"
            app:srcCompat="@drawable/back0"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:textSize="28sp"
            android:textColor="#000000"
            android:gravity="center"
            tools:ignore="MissingConstraints" />
    <ImageView
            android:id="@+id/about_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/ic_launcher"
            tools:ignore="VectorDrawableCompat" />

    <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="26sp"/>
    <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_version" />

    <LinearLayout
            android:id="@+id/ll_appabout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_version"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:orientation="vertical">

        <Button
                android:id="@+id/about_b1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"

                android:text="程序信息"
                android:textAlignment="textStart"
                android:textSize="16sp" />

        <Button
                android:id="@+id/about_b2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="功能介绍"
                android:textAlignment="textStart"
                android:textSize="16sp" />

        <Button
                android:id="@+id/about_b3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="问题反馈"
                android:textAlignment="textStart"
                android:textSize="16sp" />

        <Button
                android:id="@+id/about_b4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="检查更新"
                android:textAlignment="textStart"
                android:textSize="16sp" />
    </LinearLayout>

    <TextView
            android:id="@+id/about_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/about_copyright"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"
            android:textColor="#3F51B5"
            android:text="服务协议 | 隐私条款" />
    <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/app_copyright" />


</RelativeLayout>