<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

            <ImageView
                    android:id="@+id/iv_register_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:onClick="onBack"
                    app:srcCompat="@drawable/back0"
                    tools:ignore="MissingConstraints,VectorDrawableCompat" />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="#000000"
                    android:textSize="28sp"
                    android:text="@string/title_userinfo"/>
        </RelativeLayout>



        <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:toolbarId="@+id/toolbar">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/iv_userinfo_headImage"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_user"
                        tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/tv_userinfo_name"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:textSize="30sp"
                            android:textColor="#000000"
                            android:text="@string/user_name"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">
                        <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_margin="5dp"
                                android:background="@drawable/lv1" />

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                            <ProgressBar
                                    android:id="@+id/pgb_lv"
                                    style="?android:attr/progressBarStyleHorizontal"
                                    android:layout_width="20dip"
                                    android:layout_height="20dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="10dp"
                                    android:max="100"
                                    android:progress="80"
                                    android:progressDrawable="@drawable/progressbar" />

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_marginTop="3dp"
                                    android:layout_height="20dp"
                                    android:orientation="horizontal">

                                <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="5dp"
                                        android:layout_weight="5"
                                        android:text="LV1"
                                        android:textColor="#016505"
                                        android:textSize="16sp" />

                                <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_weight="2"
                                        android:text="0/100"
                                        android:textColor="#016505"
                                        android:textSize="16sp" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.user.UserInfoActivity">

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/user_tip_1"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="16dp"
                            android:gravity="center_vertical"
                            android:text="基本信息"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="8dp"
                            android:background="@color/split_bar" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="16dp"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/user_t2"
                                android:layout_width="60dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="4dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/user_name"
                                android:textColor="@android:color/tertiary_text_light"
                                android:textSize="16sp" />

                        <EditText
                                android:id="@+id/et_userinfo_name"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="10"
                                android:inputType="text"
                                android:maxEms="16"
                                android:minEms="1"
                                android:textSize="16sp" />


                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="16dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="60dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="4dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/user_sign"
                                android:textColor="@android:color/tertiary_text_light"
                                android:textSize="16sp" />

                        <EditText
                                android:id="@+id/et_userinfo_sign"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="10"
                                android:inputType="text"
                                android:gravity="center_vertical"
                                android:maxEms="80"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                    </LinearLayout>



                    <TextView
                            android:id="@+id/user_tip_2"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="16dp"
                            android:gravity="center_vertical"
                            android:text="详细信息"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="16dp"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/user_t3"
                                android:layout_width="60dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="4dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/user_sex"
                                android:textColor="@android:color/tertiary_text_light"
                                android:textSize="14sp" />
                        <RadioGroup
                                android:id="@+id/rg_sex_userinfo"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:layout_weight="10">
                            <RadioButton
                                    android:id="@+id/rd_userinfo_man"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="男"/>
                            <RadioButton
                                    android:id="@+id/rd_userinfo_woman"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="女"/>
                        </RadioGroup>


                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="16dp"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/user_t4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:gravity="center"
                                android:text="@string/user_birth"
                                android:textColor="@android:color/tertiary_text_light"
                                android:textSize="14sp" />

                        <TextView
                                android:id="@+id/date_userinfo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="onGetDate"
                                android:text="2000 - 01 - 01"
                                android:textSize="18sp"
                                android:textColor="#000000"
                                android:gravity="center"/>
                    </LinearLayout>


                    <View
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            android:layout_weight="1"
                            android:background="@color/split_bar" />


                    <Button
                            android:id="@+id/btn_userinfo_save"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="保存修改" />

                </LinearLayout>

            </ScrollView>


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>